<resources>
    <string name="app_name">roomDB</string>
    <string name="todo">Todo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="interestHint">Enter interests separated with comma \",\"</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="login">login</string>
    <string name="register">register</string>
    <string name="add_a_task">Add a Task</string>
    <string name="task">Task</string>
    <string name="description">Description...</string>
    <string name="finish_by">Finish by</string>
    <string name="save">Save</string>
    <string name="register2">Register</string>
    <string name="name">Name</string>
    <string name="contact_number">Contact number</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="updatetask">Update Task</string>
    <string name="mark_as_finished">Mark as finished</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="edit_details">Edit Details</string>
    <string name="contact_no">Contact No.</string>
    <string name="gender">Gender</string>
    <string name="interests">Interests</string>
    <string name="completed">Completed</string>

</resources>
