<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_dp_30"
        tools:context=".Fragment.AddTaskFragment">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/updatetask"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/_dp_60"
            android:id="@+id/textView"/>

    <EditText
            android:singleLine="true"
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task"
            android:imeOptions="actionNext"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/_dp_30"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>

    <EditText
            android:singleLine="true"
            android:id="@+id/editTextDesc"
            android:layout_width="match_parent"
            android:imeOptions="actionNext"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:layout_marginTop="@dimen/_dp_15"
            app:layout_constraintTop_toBottomOf="@+id/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <EditText
            android:singleLine="true"
            android:id="@+id/editTextFinishBy"
            android:imeOptions="actionNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/finish_by"
            android:layout_marginTop="@dimen/_dp_15"
            app:layout_constraintTop_toBottomOf="@+id/editTextDesc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <CheckBox
            android:id="@+id/checkBoxFinished"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/_dp_15"
            app:layout_constraintTop_toBottomOf="@id/editTextFinishBy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mark_as_finished" />



    <Button
            android:id="@+id/button_update"
            android:layout_width="@dimen/_dp_150"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorPrimary"
            android:text="@string/update"
            android:textAllCaps="false"
            android:layout_marginTop="@dimen/_dp_36"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxFinished"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
    />


    <Button
            app:layout_constraintTop_toBottomOf="@id/button_update"
            android:id="@+id/button_delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="@dimen/_dp_100"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_dp_15"
            android:text="@string/delete"
            android:textAllCaps="false"/>

</android.support.constraint.ConstraintLayout>
